// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders for EN 1`] = `
<div
  className="App"
>
  <div
    className="App-sidebar"
  >
    <header
      className="App-header"
    >
      <hgroup>
        <h1
          className="App-title"
        >
          Matthieu
           
          Compérat
        </h1>
        <h2
          className="App-tagline"
        >
          Web & Mobile Lead Programmer
        </h2>
      </hgroup>
      <div
        className="sidebar-details"
      >
        <p>
          13/02/1987
        </p>
        <p>
          matthieu.comperat@gmail.com
        </p>
      </div>
      <div
        className="social-container"
      >
        <a
          href="https://github.com/Mitchnsun"
          id="Github"
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            fill="white"
            height="32"
            version="1.1"
            viewBox="0 0 16 16"
            width="32"
          >
            <path
              clipRule="evenodd"
              d="M8 0C3.58 0 0 3.58 0 8C0 11.54 2.29 14.53 5.47 15.59C5.87 15.66 6.02 15.42 6.02 15.21C6.02 15.02 6.01 14.39 6.01 13.72C4 14.09 3.48 13.23 3.32 12.78C3.23 12.55 2.84 11.84 2.5 11.65C2.22 11.5 1.82 11.13 2.49 11.12C3.12 11.11 3.57 11.7 3.72 11.94C4.44 13.15 5.59 12.81 6.05 12.6C6.12 12.08 6.33 11.73 6.56 11.53C4.78 11.33 2.92 10.64 2.92 7.58C2.92 6.71 3.23 5.99 3.74 5.43C3.66 5.23 3.38 4.41 3.82 3.31C3.82 3.31 4.49 3.1 6.02 4.13C6.66 3.95 7.34 3.86 8.02 3.86C8.7 3.86 9.38 3.95 10.02 4.13C11.55 3.09 12.22 3.31 12.22 3.31C12.66 4.41 12.38 5.23 12.3 5.43C12.81 5.99 13.12 6.7 13.12 7.58C13.12 10.65 11.25 11.33 9.47 11.53C9.76 11.78 10.01 12.26 10.01 13.01C10.01 14.08 10 14.94 10 15.21C10 15.42 10.15 15.67 10.55 15.59C13.71 14.53 16 11.53 16 8C16 3.58 12.42 0 8 0Z"
              fillRule="evenodd"
            />
          </svg>
        </a>
        <a
          href="https://fr.linkedin.com/in/matthieucomperat/en"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="View Matthieu Compérat's profile on LinkedIn"
            src="LinkedInSquare.png"
          />
        </a>
      </div>
    </header>
  </div>
  <div
    className="App-container"
  >
    <div
      className="Posts"
    >
      <h2
        className="Posts-header"
      >
        Work Experiences
      </h2>
      <section
        className="Post"
      >
        <header
          className="Post-header"
        >
          <h3
            className="Post-title"
          >
            Freelance Full-stack Developer
          </h3>
          <p
            className="Post-meta"
          >
            ADSPL
            , 
            Paris
            , 
            France
             
            
          </p>
          <p
            className="Post-meta Post-meta--era"
          >
            June 2018
             - 
            June 2020
          </p>
          <p
            className="Post-meta Post-meta--tags"
          >
            <span
              className="Tag Tag-js"
            >
              ReactJS
            </span>
            <span
              className="Tag Tag-js"
            >
              NextJS
            </span>
            <span
              className="Tag Tag-js"
            >
              NodeJS
            </span>
          </p>
        </header>
        <div
          className="Post-description"
        >
          <div>
            For the client UNAPL, development of a platform to collect their members' subscription
          </div>
        </div>
      </section>
      <section
        className="Post"
      >
        <header
          className="Post-header"
        >
          <h3
            className="Post-title"
          >
            Freelance Frontend Developer
          </h3>
          <p
            className="Post-meta"
          >
            Club Med
            , 
            Paris
            , 
            France
             
            
          </p>
          <p
            className="Post-meta Post-meta--era"
          >
            June 2017
             - 
            Jan. 2020
          </p>
          <p
            className="Post-meta Post-meta--tags"
          >
            <span
              className="Tag Tag-js"
            >
              ReactJS
            </span>
            <span
              className="Tag Tag-html"
            >
              HTML5
            </span>
            <span
              className="Tag Tag-css"
            >
              CSS3
            </span>
            <span
              className="Tag Tag-js"
            >
              ES6
            </span>
            <span
              className="Tag Tag-js"
            >
              Flow
            </span>
            <span
              className="Tag Tag-css"
            >
              PostCSS
            </span>
          </p>
        </header>
        <div
          className="Post-description"
        >
          <div>
            New features and graphic redesign of customer account
          </div>
        </div>
      </section>
      <section
        className="Post"
      >
        <header
          className="Post-header"
        >
          <h3
            className="Post-title"
          >
            Freelance Frontend Developer
          </h3>
          <p
            className="Post-meta"
          >
            Verifone
            , 
            Paris
            , 
            France
             
            
          </p>
          <p
            className="Post-meta Post-meta--era"
          >
            Mar. 2017
             - 
            May 2017
          </p>
          <p
            className="Post-meta Post-meta--tags"
          >
            <span
              className="Tag Tag-js"
            >
              AngularJS
            </span>
            <span
              className="Tag Tag-html"
            >
              HTML5
            </span>
            <span
              className="Tag Tag-css"
            >
              CSS3
            </span>
            <span
              className="Tag Tag-css"
            >
              Bootstrap
            </span>
          </p>
        </header>
        <div
          className="Post-description"
        >
          <div>
            Feature on the internal website
          </div>
        </div>
      </section>
      <section
        className="Post"
      >
        <header
          className="Post-header"
        >
          <h3
            className="Post-title"
          >
            Freelance Web Developer
          </h3>
          <p
            className="Post-meta"
          >
            L'Equipe
            , 
            Paris
            , 
            France
             
            
          </p>
          <p
            className="Post-meta Post-meta--era"
          >
            Oct. 2016
             - 
            Feb. 2017
          </p>
          <p
            className="Post-meta Post-meta--tags"
          >
            <span
              className="Tag Tag-css"
            >
              SASS
            </span>
            <span
              className="Tag Tag-html"
            >
              HTML5
            </span>
            <span
              className="Tag Tag-css"
            >
              CSS3
            </span>
          </p>
        </header>
        <div
          className="Post-description"
        >
          <div>
            Graphic redesign integration
          </div>
        </div>
      </section>
      <section
        className="Post"
      >
        <header
          className="Post-header"
        >
          <h3
            className="Post-title"
          >
            Web & Mobile Lead Programmer
          </h3>
          <p
            className="Post-meta"
          >
            CGI
            , 
            Paris
            , 
            France
             
            
          </p>
          <p
            className="Post-meta Post-meta--era"
          >
            Sept. 2012
             - 
            Sept. 2016
          </p>
          <p
            className="Post-meta Post-meta--tags"
          >
            <span
              className="Tag Tag-html"
            >
              Web-application
            </span>
            <span
              className="Tag Tag-html"
            >
              HTML5
            </span>
            <span
              className="Tag Tag-css"
            >
              CSS3
            </span>
            <span
              className="Tag Tag-js"
            >
              Backbone.js
            </span>
            <span
              className="Tag Tag-js"
            >
              Dust.js / Handlebar.js
            </span>
            <span
              className="Tag Tag-js"
            >
              Phone Gap
            </span>
          </p>
        </header>
        <div
          className="Post-description"
        >
          <div>
            Current project: Sephora website for smartphones with Backbone, underscore, jQuery and Dust. Exposing the data from the web services. Two web applications with Cordova based on Backbone.js framework.
          </div>
          <div>
            Past projects:
            <ul>
              <li>
                Responsive website for Louis Vuitton as web developer.
              </li>
              <li>
                Web-application for Total in .Net environment. (HTML, CSS with Bootstrap from Twitter and jQuery).
              </li>
            </ul>
          </div>
        </div>
      </section>
      <section
        className="Post"
      >
        <header
          className="Post-header"
        >
          <h3
            className="Post-title"
          >
            Web mobile analyst
          </h3>
          <p
            className="Post-meta"
          >
            Logica
            , 
            Lyon
            , 
            France
             
             - Final year project
          </p>
          <p
            className="Post-meta Post-meta--era"
          >
            Feb. 2012
             - 
            Aug. 2012
          </p>
          <p
            className="Post-meta Post-meta--tags"
          >
            <span
              className="Tag Tag-html"
            >
              Web-application
            </span>
            <span
              className="Tag Tag-js"
            >
              jQuery Mobile
            </span>
            <span
              className="Tag Tag-css"
            >
              Twitter Bootstrap
            </span>
            <span
              className="Tag Tag-js"
            >
              Phone Gap
            </span>
            <span
              className="Tag Tag-ios"
            >
              Cocoa Touch
            </span>
          </p>
        </header>
        <div
          className="Post-description"
        >
          <div>
            CMS integration in the mobility
          </div>
          <div>
            Projects :
            <ul>
              <li>
                Software package of events management, responsible of CMS problematic, CMS studies and tests. Followed by pre-sales of the project feasibility study, ripening workshop, costing of the project cost.
              </li>
              <li>
                iOS developments
              </li>
            </ul>
          </div>
        </div>
      </section>
      <section
        className="Post"
      >
        <header
          className="Post-header"
        >
          <h3
            className="Post-title"
          >
            Intern in IT
          </h3>
          <p
            className="Post-meta"
          >
            Daher-Socata
            , 
            Pembroke Pines
            , 
            USA
             
             - One-year internship
          </p>
          <p
            className="Post-meta Post-meta--era"
          >
            July 2010
             - 
            July 2011
          </p>
          <p
            className="Post-meta Post-meta--tags"
          >
            <span
              className="Tag Tag-html"
            >
              HTML
            </span>
            <span
              className="Tag Tag-back"
            >
              PHP
            </span>
            <span
              className="Tag Tag-js"
            >
              jQuery
            </span>
            <span
              className="Tag Tag-db"
            >
              MySQL
            </span>
            <span
              className="Tag Tag-ios"
            >
              Cocoa Touch
            </span>
            <span
              className="Tag Tag-"
            >
              Joomla
            </span>
          </p>
        </header>
        <div
          className="Post-description"
        >
          <div>
            Projects developped:
            <ul>
              <li>
                Web Application in a CRM (HTML, PHP, JavaScript-jQuery, and MySQL)
              </li>
              <li>
                iPad Application for the booth in Air Shows (Objective-C, Cocoa Touch)
              </li>
              <li>
                CMS Setting
              </li>
            </ul>
          </div>
          <div>
            I was in a complete autonomy to discover the different languages and to develop the different applications. I provided support to the users after acceptance-test and insured the transfer of the application to the head quarter in France.
          </div>
        </div>
      </section>
    </div>
    <div
      className="Posts"
    >
      <h2
        className="Posts-header"
      >
        Education
      </h2>
      <section
        className="Post"
      >
        <header
          className="Post-header"
        >
          <h3
            className="Post-title"
          >
            CPE Lyon
          </h3>
          <p
            className="Post-meta"
          >
            Engineer School
            , 
            Lyon
            , 
            France
             
             - department of electronics, IT and Telecommunications,
          </p>
          <p
            className="Post-meta Post-meta--era"
          >
            2007
             - 
            2012
          </p>
          <p
            className="Post-meta Post-meta--tags"
          />
        </header>
        <div
          className="Post-description"
        >
          <div>
            Bachelor degree obtained in June 2009, Graduation at MSc Level in September 2012. 2 years full-time higher education in mathematics and science with languages and general studies, 3 years at higher education. Engineering school in France
          </div>
          <div>
            Main subjects: Programmation (C, C++), Databases, Digital and analogical electronics Signal and linear systems, Optics.
          </div>
          <div>
            IT Specialization : HTML, PHP, Java, XML, Interconnection and administration of networks, Graphs and algorithms, Getting an award named “Best increase prospect” from the CCIL (Chamber of commerce and industry of Lyon) during Campus Creation 2008 contest. The target was to present an innovative product. Project: “Eau Parleur”
          </div>
        </div>
      </section>
    </div>
    <div
      className="Posts"
    >
      <h2
        className="Posts-header"
      >
        Extras
      </h2>
      <section
        className="Post  compact"
      >
        <header
          className="Post-header"
        >
          <h2
            className="Post-title"
          >
            Languages
          </h2>
        </header>
        <div
          className="Post-description"
        >
          
          <ul>
            <li>
              French : mother tongue
            </li>
            <li>
              English : Good level (spoken, written, reading) - FCE of Cambridge (B2)
            </li>
            <li>
              Spanish : basic knowledge
            </li>
          </ul>
        </div>
      </section>
      <section
        className="Post  compact"
      >
        <header
          className="Post-header"
        >
          <h2
            className="Post-title"
          >
            Interests
          </h2>
        </header>
        <div
          className="Post-description"
        >
          
          <ul>
            <li>
              ReactJS
            </li>
            <li>
              NodeJS
            </li>
            <li>
              TypeScript
            </li>
            <li>
              Git
            </li>
            <li>
              CSS
            </li>
          </ul>
        </div>
      </section>
      <section
        className="Post print-hidden compact"
      >
        <header
          className="Post-header"
        >
          <h2
            className="Post-title"
          >
            Personal projects
          </h2>
        </header>
        <div
          className="Post-description"
        >
          
          <ul>
            <li>
              Supersprint Result : site for the results of Supersprint 20ième
            </li>
            <li>
              My web resume
            </li>
            <li>
              Lotofoot : Football betting website for friends
            </li>
          </ul>
        </div>
      </section>
      <section
        className="Post print-hidden compact"
      >
        <header
          className="Post-header"
        >
          <h2
            className="Post-title"
          >
            Sports
          </h2>
        </header>
        <div
          className="Post-description"
        >
          
          <ul>
            <li>
              Triathlon
            </li>
            <li>
              Surf
            </li>
          </ul>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`App renders for FR 1`] = `
<div
  className="App"
>
  <div
    className="App-sidebar"
  >
    <header
      className="App-header"
    >
      <hgroup>
        <h1
          className="App-title"
        >
          Matthieu
           
          Compérat
        </h1>
        <h2
          className="App-tagline"
        >
          Référent technique Mobile
        </h2>
      </hgroup>
      <div
        className="sidebar-details"
      >
        <p>
          13/02/1987
        </p>
        <p>
          matthieu.comperat@gmail.com
        </p>
      </div>
      <div
        className="social-container"
      >
        <a
          href="https://github.com/Mitchnsun"
          id="Github"
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            fill="white"
            height="32"
            version="1.1"
            viewBox="0 0 16 16"
            width="32"
          >
            <path
              clipRule="evenodd"
              d="M8 0C3.58 0 0 3.58 0 8C0 11.54 2.29 14.53 5.47 15.59C5.87 15.66 6.02 15.42 6.02 15.21C6.02 15.02 6.01 14.39 6.01 13.72C4 14.09 3.48 13.23 3.32 12.78C3.23 12.55 2.84 11.84 2.5 11.65C2.22 11.5 1.82 11.13 2.49 11.12C3.12 11.11 3.57 11.7 3.72 11.94C4.44 13.15 5.59 12.81 6.05 12.6C6.12 12.08 6.33 11.73 6.56 11.53C4.78 11.33 2.92 10.64 2.92 7.58C2.92 6.71 3.23 5.99 3.74 5.43C3.66 5.23 3.38 4.41 3.82 3.31C3.82 3.31 4.49 3.1 6.02 4.13C6.66 3.95 7.34 3.86 8.02 3.86C8.7 3.86 9.38 3.95 10.02 4.13C11.55 3.09 12.22 3.31 12.22 3.31C12.66 4.41 12.38 5.23 12.3 5.43C12.81 5.99 13.12 6.7 13.12 7.58C13.12 10.65 11.25 11.33 9.47 11.53C9.76 11.78 10.01 12.26 10.01 13.01C10.01 14.08 10 14.94 10 15.21C10 15.42 10.15 15.67 10.55 15.59C13.71 14.53 16 11.53 16 8C16 3.58 12.42 0 8 0Z"
              fillRule="evenodd"
            />
          </svg>
        </a>
        <a
          href="https://fr.linkedin.com/in/matthieucomperat"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="View Matthieu Compérat's profile on LinkedIn"
            src="LinkedInSquare.png"
          />
        </a>
      </div>
    </header>
  </div>
  <div
    className="App-container"
  >
    <div
      className="Posts"
    >
      <h2
        className="Posts-header"
      >
        Expériences professionnelles
      </h2>
      <section
        className="Post"
      >
        <header
          className="Post-header"
        >
          <h3
            className="Post-title"
          >
            Freelance Full-stack Developer
          </h3>
          <p
            className="Post-meta"
          >
            ADSPL
            , 
            Paris
            , 
            France
             
            
          </p>
          <p
            className="Post-meta Post-meta--era"
          >
            Juin 2018
             - 
            Juin 2020
          </p>
          <p
            className="Post-meta Post-meta--tags"
          >
            <span
              className="Tag Tag-js"
            >
              ReactJS
            </span>
            <span
              className="Tag Tag-js"
            >
              NextJS
            </span>
            <span
              className="Tag Tag-js"
            >
              NodeJS
            </span>
          </p>
        </header>
        <div
          className="Post-description"
        >
          <div>
            Développement d'un site pour le réglèment de la cotisation du syndicat UNAPL
          </div>
        </div>
      </section>
      <section
        className="Post"
      >
        <header
          className="Post-header"
        >
          <h3
            className="Post-title"
          >
            Freelance Frontend Developer
          </h3>
          <p
            className="Post-meta"
          >
            Club Med
            , 
            Paris
            , 
            France
             
            
          </p>
          <p
            className="Post-meta Post-meta--era"
          >
            Juin 2017
             - 
            Janvier 2020
          </p>
          <p
            className="Post-meta Post-meta--tags"
          >
            <span
              className="Tag Tag-js"
            >
              ReactJS
            </span>
            <span
              className="Tag Tag-html"
            >
              HTML5
            </span>
            <span
              className="Tag Tag-css"
            >
              CSS3
            </span>
            <span
              className="Tag Tag-js"
            >
              ES6
            </span>
            <span
              className="Tag Tag-js"
            >
              Flow
            </span>
            <span
              className="Tag Tag-js"
            >
              NextJS
            </span>
          </p>
        </header>
        <div
          className="Post-description"
        >
          <div>
            Evolutions et refonte graphique sur l'espace client du site commercial
          </div>
        </div>
      </section>
      <section
        className="Post"
      >
        <header
          className="Post-header"
        >
          <h3
            className="Post-title"
          >
            Freelance Frontend Developer
          </h3>
          <p
            className="Post-meta"
          >
            Verifone
            , 
            Paris
            , 
            France
             
            
          </p>
          <p
            className="Post-meta Post-meta--era"
          >
            Mars 2017
             - 
            Mai 2017
          </p>
          <p
            className="Post-meta Post-meta--tags"
          >
            <span
              className="Tag Tag-js"
            >
              AngularJS
            </span>
            <span
              className="Tag Tag-html"
            >
              HTML5
            </span>
            <span
              className="Tag Tag-css"
            >
              CSS3
            </span>
            <span
              className="Tag Tag-css"
            >
              Bootstrap
            </span>
          </p>
        </header>
        <div
          className="Post-description"
        >
          <div>
            Réalisation de fonctionnalité sur leur outil interne
          </div>
        </div>
      </section>
      <section
        className="Post"
      >
        <header
          className="Post-header"
        >
          <h3
            className="Post-title"
          >
            Freelance Web Developer
          </h3>
          <p
            className="Post-meta"
          >
            L'Equipe
            , 
            Paris
            , 
            France
             
            
          </p>
          <p
            className="Post-meta Post-meta--era"
          >
            Oct. 2016
             - 
            Fev. 2017
          </p>
          <p
            className="Post-meta Post-meta--tags"
          >
            <span
              className="Tag Tag-css"
            >
              SASS
            </span>
            <span
              className="Tag Tag-html"
            >
              HTML5
            </span>
            <span
              className="Tag Tag-css"
            >
              CSS3
            </span>
          </p>
        </header>
        <div
          className="Post-description"
        >
          <div>
            Intégration de la refonte graphique
          </div>
        </div>
      </section>
      <section
        className="Post"
      >
        <header
          className="Post-header"
        >
          <h3
            className="Post-title"
          >
            Référent technique Web & Mobile
          </h3>
          <p
            className="Post-meta"
          >
            CGI
            , 
            Paris
            , 
            France
             
            
          </p>
          <p
            className="Post-meta Post-meta--era"
          >
            Mai 2014
             - 
            Sept. 2016
          </p>
          <p
            className="Post-meta Post-meta--tags"
          >
            <span
              className="Tag Tag-html"
            >
              Web-application
            </span>
            <span
              className="Tag Tag-html"
            >
              HTML5
            </span>
            <span
              className="Tag Tag-css"
            >
              CSS3
            </span>
            <span
              className="Tag Tag-js"
            >
              Backbone.js
            </span>
            <span
              className="Tag Tag-js"
            >
              Dust.js / Handlebar.js
            </span>
            <span
              className="Tag Tag-js"
            >
              Phone Gap
            </span>
          </p>
        </header>
        <div
          className="Post-description"
        >
          <div>
            Projet Sephora :
            <ul>
              <li>
                Evolutions du site web-mobile de Sephora et création d'une version italienne (m.sephora.it)
              </li>
              <li>
                Evolutions des applications iOS internes, avec Cordova/Phone Gap (iPad Color Profile et iPhone MySephora)
              </li>
              <li>
                Intégration et maintenance de la partie webmobile des applications iPhone et Android
              </li>
            </ul>
          </div>
          <div>
            Responsabilités : Référent technique d'une équipe de deux développeurs
            <ul>
              <li>
                Cadrage technique des évolutions. Suivi et réalisation des évolutions avec une équipe de deux développeurs.
              </li>
            </ul>
          </div>
        </div>
      </section>
      <section
        className="Post"
      >
        <header
          className="Post-header"
        >
          <h3
            className="Post-title"
          >
            Ingénieur en Technologie de l'Information
          </h3>
          <p
            className="Post-meta"
          >
            CGI
            , 
            Paris
            , 
            France
             
            
          </p>
          <p
            className="Post-meta Post-meta--era"
          >
            Sept. 2012
             - 
            Mai 2014
          </p>
          <p
            className="Post-meta Post-meta--tags"
          >
            <span
              className="Tag Tag-html"
            >
              Web-application
            </span>
            <span
              className="Tag Tag-js"
            >
              Backbone.js
            </span>
            <span
              className="Tag Tag-css"
            >
              Responsive
            </span>
            <span
              className="Tag Tag-css"
            >
              LESS
            </span>
            <span
              className="Tag Tag-js"
            >
              Dust.js
            </span>
            <span
              className="Tag Tag-ios"
            >
              Application iOS
            </span>
          </p>
        </header>
        <div
          className="Post-description"
        >
          <div>
            Projet Sephora :
            <ul>
              <li>
                Réalisation du site web-mobile de Sephora
              </li>
              <li>
                Mise à jour de l’application iPhone de Sephora
              </li>
              <li>
                Reprise et évolution de l’application iPad Color Profile
              </li>
            </ul>
          </div>
          <div>
            Projet Louis Vuitton :
            <ul>
              <li>
                Réalisation de l’interface client Web du site à partir du socle ATG. Compatibilité pour toutes les tailles d’écran. Adaptation pour compatibilité IE8/7/6.
              </li>
            </ul>
          </div>
        </div>
      </section>
      <section
        className="Post"
      >
        <header
          className="Post-header"
        >
          <h3
            className="Post-title"
          >
            Analyste développeur mobile et web
          </h3>
          <p
            className="Post-meta"
          >
            Logica
            , 
            Lyon
            , 
            France
             
             - Stage projet de fin d'étude
          </p>
          <p
            className="Post-meta Post-meta--era"
          >
            Fév. 2012
             - 
            Août 2012
          </p>
          <p
            className="Post-meta Post-meta--tags"
          >
            <span
              className="Tag Tag-html"
            >
              Web-application
            </span>
            <span
              className="Tag Tag-js"
            >
              jQuery Mobile
            </span>
            <span
              className="Tag Tag-css"
            >
              Twitter Bootstrap
            </span>
            <span
              className="Tag Tag-js"
            >
              Phone Gap
            </span>
            <span
              className="Tag Tag-ios"
            >
              Cocoa Touch
            </span>
          </p>
        </header>
        <div
          className="Post-description"
        >
          <div>
            Intégrer la notion de CMS avec la mobilite
          </div>
          <div>
            Réalisations :
            <ul>
              <li>
                Progiciel de gestion d’événements, en charge de la problématique de CMS, étude et test de CMS. Suivi de l'avant-vente du projet, étude de faisabilité, atelier de maturation, chiffrage du coût du projet.
              </li>
              <li>
                Participation aux développements d’applications iOS
              </li>
            </ul>
          </div>
        </div>
      </section>
      <section
        className="Post"
      >
        <header
          className="Post-header"
        >
          <h3
            className="Post-title"
          >
            Analyste développeur
          </h3>
          <p
            className="Post-meta"
          >
            Daher-Socata
            , 
            Pembroke Pines
            , 
            USA
             
             - Stage année de césure
          </p>
          <p
            className="Post-meta Post-meta--era"
          >
            Juil. 2010
             - 
            Juil. 2011
          </p>
          <p
            className="Post-meta Post-meta--tags"
          >
            <span
              className="Tag Tag-html"
            >
              HTML
            </span>
            <span
              className="Tag Tag-back"
            >
              PHP
            </span>
            <span
              className="Tag Tag-js"
            >
              jQuery
            </span>
            <span
              className="Tag Tag-db"
            >
              MySQL
            </span>
            <span
              className="Tag Tag-ios"
            >
              Objective-C
            </span>
            <span
              className="Tag Tag-"
            >
              Joomla
            </span>
          </p>
        </header>
        <div
          className="Post-description"
        >
          <div>
            Découvrir et utiliser les différents langages
          </div>
          <div>
            Réalisations :
            <ul>
              <li>
                Applications web dans un CRM
              </li>
              <li>
                Application iPad pour les salons aéronautiques
              </li>
              <li>
                Configuration d’un CMS
              </li>
            </ul>
          </div>
          <div>
            J’étais en complète autonomie pour découvrir les différents langages et pour développer les différentes applications. J’ai fourni le support aux utilisateurs après validation et assurer le transfert des applications au siège social en France. Mon but était de laisser une documentation claire pour les prochains développeurs.
          </div>
        </div>
      </section>
    </div>
    <div
      className="Posts"
    >
      <h2
        className="Posts-header"
      >
        Education
      </h2>
      <section
        className="Post"
      >
        <header
          className="Post-header"
        >
          <h3
            className="Post-title"
          >
            Ecole supérieure de Chimie, Physique et Electronique de Lyon (ESCPE)
          </h3>
          <p
            className="Post-meta"
          >
            Ecole d'ingénieur
            , 
            Lyon
            , 
            France
             
             - Electronique, Télécoms et informatique
          </p>
          <p
            className="Post-meta Post-meta--era"
          >
            2007
             - 
            2012
          </p>
          <p
            className="Post-meta Post-meta--tags"
          />
        </header>
        <div
          className="Post-description"
        >
          <div>
            Diplomé en Septembre 2012. Bachelor obtenu en Juin 2009. Majeure SID (Systèmes informatiques distribuées) : Services Web (HTML/CSS/PHP), Java, Interconnexion et administration des réseaux, Graphes et Algorithmes.
          </div>
        </div>
      </section>
    </div>
    <div
      className="Posts"
    >
      <h2
        className="Posts-header"
      >
        Extras
      </h2>
      <section
        className="Post  compact"
      >
        <header
          className="Post-header"
        >
          <h2
            className="Post-title"
          >
            Langues
          </h2>
        </header>
        <div
          className="Post-description"
        >
          
          <ul>
            <li>
              Français : langue maternelle
            </li>
            <li>
              Anglais : courant - Niveau B2 FCE of Cambridge
            </li>
            <li>
              Espagnol : notions
            </li>
          </ul>
        </div>
      </section>
      <section
        className="Post  compact"
      >
        <header
          className="Post-header"
        >
          <h2
            className="Post-title"
          >
            Intérêts
          </h2>
        </header>
        <div
          className="Post-description"
        >
          
          <ul>
            <li>
              ReactJS
            </li>
            <li>
              NodeJS
            </li>
            <li>
              TypeScript
            </li>
            <li>
              Git
            </li>
            <li>
              CSS
            </li>
          </ul>
        </div>
      </section>
      <section
        className="Post print-hidden compact"
      >
        <header
          className="Post-header"
        >
          <h2
            className="Post-title"
          >
            Projets personnels
          </h2>
        </header>
        <div
          className="Post-description"
        >
          
          <ul>
            <li>
              Supersprint Résultat : Site d'affichage des résultat du Supersprint 20ième
            </li>
            <li>
              Mon CV Web
            </li>
            <li>
              Lotofoot : site de pari footbalistique entre amis
            </li>
          </ul>
        </div>
      </section>
      <section
        className="Post print-hidden compact"
      >
        <header
          className="Post-header"
        >
          <h2
            className="Post-title"
          >
            Sports
          </h2>
        </header>
        <div
          className="Post-description"
        >
          
          <ul>
            <li>
              Triathlon
            </li>
            <li>
              Surf
            </li>
          </ul>
        </div>
      </section>
    </div>
  </div>
</div>
`;
